Applying CSS Styles (kindly read up on flex-grow and overflow both x and y CSS properties) and Click Events in React. The use of the $ {} to import a JavaScript variable into another one and Arrow Function to prevent immediately invoking a function passed into an event listener

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,73 @@
-span {
- font-weight: bold;
- color: blueviolet;
+*{
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+}
+
+@font-face {
+ font-family: Roboto;
+ src: url(./font/Roboto-Light.ttf);
+ src: url(./font/Roboto-Regular.ttf);
+ src: url(./font/Roboto-Medium.ttf);
+ src: url(./font/Roboto-Bold.ttf);
+ src: url(./font/Roboto-Black.ttf);
+}
+
+html{
+ font-size: 22px;
+ font-family: Roboto;
+}
+
+body {
+ min-height: 100vh;
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ height: 100vh; 
+ width: 100%; 
+ max-width: 500px;
+ border: 1px solid mediumblue;
+ margin: auto;
+}
+
+header {
+ width: 100%;
+ padding: 0 0.25em;
+ background-color: mediumblue;
+ color: aliceblue;
+ border: 1px solid red;
+ display: flex;
+ justify-content: space-between;
+ text-align: center;
+ align-items: center;
+}
+
+nav{
+ border: 1px solid green;
+}
+
+main {
+ border: 10px solid yellow;
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ flex-grow: 1;
+ justify-content: center;
+ align-items: center;
+ overflow-y: auto;
+}
+
+footer {
+ width: 100%;
+ padding: 0.25em;
+ background-color: mediumblue;
+ color: aliceblue;
+ display: grid;
+ place-content: center;
 }
